--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
